overflow-x fix

--- a/style/MainStyle.css
+++ b/style/MainStyle.css
@@ -1,3 +1,4 @@
+html, body{overflow-x: hidden;} /*x축으로 넘어가는 현상fix*/
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     *{
